@@ -9,6 +9,7 @@ import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ResourceBundle;
@@ -27,7 +28,6 @@ import doctor.models.Patient;
 import doctor.params.DoctorParams;
 import doctor.treeobjects.MessagePatientTreeObject;
 import javafx.application.Platform;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
@@ -37,17 +37,13 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Label;
 import javafx.scene.control.TreeItem;
-import javafx.scene.control.TreeTableColumn;
-import javafx.scene.control.TreeTableColumn.CellDataFeatures;
 import javafx.scene.effect.BoxBlur;
 import javafx.scene.image.Image;
-import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.Pane;
 import javafx.scene.paint.Color;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import javafx.stage.StageStyle;
-import javafx.util.Callback;
 
 public class DoctorMessengerController implements Initializable {
 
@@ -68,12 +64,12 @@ public class DoctorMessengerController implements Initializable {
 	}
 
 	@FXML
-	private void closeApp(MouseEvent event) {
+	private void closeApp() {
 		System.exit(0);
 	}
 
 	@FXML
-	private void minWindow(MouseEvent event) {
+	private void minWindow() {
 		Stage stage = (Stage) mainPane.getScene().getWindow();
 		stage.setIconified(true);
 	}
@@ -92,7 +88,7 @@ public class DoctorMessengerController implements Initializable {
 					APIRequest requestAPI = new APIRequest();
 					requestAPI.setDoctorId(AccountObjectCommunication.getDoctor().getDoctorId());
 
-					String postData = "APIRequest=" + URLEncoder.encode(gsonConverter.toJson(requestAPI), "UTF-8");
+					String postData = "APIRequest=" + URLEncoder.encode(gsonConverter.toJson(requestAPI), StandardCharsets.UTF_8);
 
 					connection.setDoOutput(true);
 					OutputStreamWriter writer = new OutputStreamWriter(connection.getOutputStream());
@@ -101,7 +97,7 @@ public class DoctorMessengerController implements Initializable {
 
 					BufferedReader inputReader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 					String inputLine;
-					StringBuffer response = new StringBuffer();
+					StringBuilder response = new StringBuilder();
 					while ((inputLine = inputReader.readLine()) != null) {
 						response.append(inputLine);
 					}
@@ -110,20 +106,12 @@ public class DoctorMessengerController implements Initializable {
 					APIResponse responseAPI = gsonConverter.fromJson(response.toString(), APIResponse.class);
 					patientsList = responseAPI.getNoDoctorPatients();
 
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							loadData();	
-						}
-					});
+					Platform.runLater(() -> loadData());
 
-				} catch (ConnectException | FileNotFoundException conncetionError) {
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							openDialog("Failed to connect to the server");
-							conncetionError.printStackTrace();
-						}
+				} catch (ConnectException | FileNotFoundException connectionError) {
+					Platform.runLater(() -> {
+						openDialog();
+						connectionError.printStackTrace();
 					});
 				} catch (IOException error) {
 					error.printStackTrace();
@@ -134,12 +122,12 @@ public class DoctorMessengerController implements Initializable {
 	}
 
 	// Displays any error returned form the Rest API
-	private void openDialog(String message) {
+	private void openDialog() {
 		try {
 			FXMLLoader loader = new FXMLLoader(getClass().getResource(DoctorParams.DIALOG_POP_UP_VIEW));
-			Parent root = (Parent) loader.load();
-			DialogPopUpController controler = loader.getController();
-			controler.setMessage(message);
+			Parent root = loader.load();
+			DialogPopUpController controller = loader.getController();
+			controller.setMessage("Failed to connect to the server");
 			Stage stage = new Stage();
 			stage.setHeight(130);
 			stage.setWidth(300);
@@ -151,7 +139,7 @@ public class DoctorMessengerController implements Initializable {
 			stage.setTitle("Telelepsia Message");
 			stage.getIcons().add(new Image(DoctorParams.APP_ICON));
 
-			// Set the pop up in the center of the main menu window
+			// Set the pop-up in the center of the main menu window
 			stage.setX(LogInController.getStage().getX() + LogInController.getStage().getWidth() / 2
 					- stage.getWidth() / 2);
 			stage.setY(-75 + LogInController.getStage().getY() + LogInController.getStage().getHeight() / 2
@@ -159,9 +147,7 @@ public class DoctorMessengerController implements Initializable {
 
 			AccountObjectCommunication.getAnchorPane().setEffect(new BoxBlur(4, 4, 4));
 			stage.show();
-			stage.setOnHiding(event -> {
-				AccountObjectCommunication.getAnchorPane().setEffect(null);
-			});
+			stage.setOnHiding(event -> AccountObjectCommunication.getAnchorPane().setEffect(null));
 		} catch (IOException error) {
 			error.printStackTrace();
 		}
@@ -187,23 +173,13 @@ public class DoctorMessengerController implements Initializable {
 		JFXTreeTableColumn<MessagePatientTreeObject, String> patientName = new JFXTreeTableColumn<>("Patient Name");
 		patientName.setPrefWidth(110);
 		patientName.setCellValueFactory(
-				new Callback<JFXTreeTableColumn.CellDataFeatures<MessagePatientTreeObject, String>, ObservableValue<String>>() {
-					@Override
-					public ObservableValue<String> call(CellDataFeatures<MessagePatientTreeObject, String> param) {
-						return param.getValue().getValue().getPatientName();
-					}
-				});
+				param -> param.getValue().getValue().getPatientName());
 		patientName.setResizable(false);
 
 		JFXTreeTableColumn<MessagePatientTreeObject, String> patientEmail = new JFXTreeTableColumn<>("Patient Email");
 		patientEmail.setPrefWidth(200);
 		patientEmail.setCellValueFactory(
-				new Callback<JFXTreeTableColumn.CellDataFeatures<MessagePatientTreeObject, String>, ObservableValue<String>>() {
-					@Override
-					public ObservableValue<String> call(CellDataFeatures<MessagePatientTreeObject, String> param) {
-						return param.getValue().getValue().getPatientEmail();
-					}
-				});
+				param -> param.getValue().getValue().getPatientEmail());
 		patientEmail.setResizable(false);
 
 		JFXTreeTableColumn<MessagePatientTreeObject, JFXButton> messagePatient = new JFXTreeTableColumn<>(
@@ -211,16 +187,10 @@ public class DoctorMessengerController implements Initializable {
 		messagePatient.setPrefWidth(120);
 		messagePatient.setStyle("-fx-alignment: center");
 		messagePatient.setCellValueFactory(
-				new Callback<TreeTableColumn.CellDataFeatures<MessagePatientTreeObject, JFXButton>, ObservableValue<JFXButton>>() {
-					@Override
-					public ObservableValue<JFXButton> call(
-							CellDataFeatures<MessagePatientTreeObject, JFXButton> param) {
-						return param.getValue().getValue().getMessagePatient();
-					}
-				});
+				param -> param.getValue().getValue().getMessagePatient());
 		messagePatient.setResizable(false);
 
-		TreeItem<MessagePatientTreeObject> root = new RecursiveTreeItem<MessagePatientTreeObject>(messageObjects,
+		TreeItem<MessagePatientTreeObject> root = new RecursiveTreeItem<>(messageObjects,
 				RecursiveTreeObject::getChildren);
 		messageTreeView.setSelectionModel(null);
 		messageTreeView.setPlaceholder(new Label("No patients found assigned to this account"));
