@@ -9,6 +9,7 @@ import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ResourceBundle;
 
 import com.google.gson.Gson;
@@ -52,7 +53,7 @@ public class InsertIdController implements Initializable {
 		confirmButton.setOnAction((ActionEvent event) -> {
 			if(idField.validate()) {
 				confirmButton.setDisable(true);
-				updateId(idField.getText().toString());
+				updateId(idField.getText());
 			}
 		});
 	}
@@ -72,7 +73,7 @@ public class InsertIdController implements Initializable {
 					APIRequest requestAPI = new APIRequest();
 					if(!idValue.equals("")) {requestAPI.setDoctorIdentification(idValue);}
 					requestAPI.setDoctorId(AccountObjectCommunication.getDoctor().getDoctorId());
-					postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), "UTF-8");
+					postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), StandardCharsets.UTF_8);
 					
 					
 					connection.setDoOutput(true);
@@ -82,7 +83,7 @@ public class InsertIdController implements Initializable {
 					
 					BufferedReader inputReader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 					String inputLine;
-					StringBuffer response = new StringBuffer();
+					StringBuilder response = new StringBuilder();
 					while ((inputLine = inputReader.readLine()) != null) {
 						response.append(inputLine);
 					}
@@ -92,33 +93,24 @@ public class InsertIdController implements Initializable {
 					APIResponse responseAPI = gsonConverter.fromJson(response.toString(), APIResponse.class);
 					
 					if(responseAPI.isError()) {
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								confirmButton.setDisable(false);
-								idField.setText("");
-							}
+						Platform.runLater(() -> {
+							confirmButton.setDisable(false);
+							idField.setText("");
 						});
 						
 					} else {
 						
 						AccountObjectCommunication.getDoctor().setDoctorIdNumber(idValue);
 						
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								Stage stage = (Stage) confirmButton.getScene().getWindow();
-								stage.close();
-							}
+						Platform.runLater(() -> {
+							Stage stage = (Stage) confirmButton.getScene().getWindow();
+							stage.close();
 						});
 					}
 					
-				} catch (ConnectException | FileNotFoundException conncetionError) {
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							// TODO - Show error message
-						}
+				} catch (ConnectException | FileNotFoundException connectionError) {
+					Platform.runLater(() -> {
+						// TODO - Show error message
 					});
 				} catch (IOException error) {
 					error.printStackTrace();
