@@ -1,25 +1,10 @@
 package doctor.controllers;
 
-import java.io.BufferedReader;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.net.ConnectException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.sql.Timestamp;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.List;
-import java.util.ResourceBundle;
-
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXComboBox;
-
+import de.gsi.chart.XYChart;
 import de.gsi.chart.axes.spi.DefaultNumericAxis;
 import de.gsi.chart.plugins.Zoomer;
 import de.gsi.chart.ui.geometry.Side;
@@ -29,8 +14,6 @@ import doctor.models.APIRequest;
 import doctor.models.APIResponse;
 import doctor.models.BitalinoPackage;
 import doctor.models.Patient;
-import doctor.params.DoctorParams;
-import de.gsi.chart.XYChart;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
@@ -40,14 +23,23 @@ import javafx.scene.Scene;
 import javafx.scene.control.DatePicker;
 import javafx.scene.control.Label;
 import javafx.scene.effect.BoxBlur;
-import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.paint.Color;
-import javafx.scene.shape.Rectangle;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import javafx.stage.StageStyle;
+
+import java.io.*;
+import java.net.ConnectException;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.sql.Timestamp;
+import java.util.*;
+
+import static doctor.params.DoctorParams.*;
 
 public class PatientRecordsController implements Initializable {
 
@@ -62,8 +54,6 @@ public class PatientRecordsController implements Initializable {
 	private JFXButton changeGraph;
 	@FXML
 	private JFXComboBox<String> timeSelection;
-	@FXML
-	private Rectangle selectRect;
 	@FXML
 	private Label patientName;
 	@FXML
@@ -83,9 +73,9 @@ public class PatientRecordsController implements Initializable {
 
 	private final FloatDataSet EMGdataSet = new FloatDataSet("EMG Records");
 
-	private DefaultNumericAxis xAxis = new DefaultNumericAxis("Time", "Hundredths of a second");
+	private final DefaultNumericAxis xAxis = new DefaultNumericAxis("Time", "Hundredths of a second");
 
-	private DefaultNumericAxis yAxis = new DefaultNumericAxis("Records", "mV");
+	private final DefaultNumericAxis yAxis = new DefaultNumericAxis("Records", "mV");
 
 	// Array to store the 20 minutes gap in milliseconds
 	private float[] time20Array;
@@ -113,14 +103,10 @@ public class PatientRecordsController implements Initializable {
 		createSamplesArrays();
 
 		// When a new date is selected then unable the time combo box
-		datePicker.valueProperty().addListener((observable, oldDate, newDate) -> {
-			timeSelection.setDisable(false);
-		});
+		datePicker.valueProperty().addListener((observable, oldDate, newDate) -> timeSelection.setDisable(false));
 
 		// Every time a new time is selected then a request is sent
-		timeSelection.valueProperty().addListener((observable, oldTime, newTime) -> {
-			getPatientDayData(Timestamp.valueOf(datePicker.getValue() + newTime + ":00.000"));
-		});
+		timeSelection.valueProperty().addListener((observable, oldTime, newTime) -> getPatientDayData(Timestamp.valueOf(datePicker.getValue() + newTime + ":00.000")));
 
 		xAxis.setSide(Side.BOTTOM);
 		yAxis.setSide(Side.LEFT);
@@ -138,7 +124,7 @@ public class PatientRecordsController implements Initializable {
 	}
 
 	@FXML
-	private void changeChart(MouseEvent event) {
+	private void changeChart() {
 
 		if (isECG) { // If true then ECG graph has to be change
 
@@ -159,22 +145,22 @@ public class PatientRecordsController implements Initializable {
 	}
 
 	@FXML
-	private void minWindow(MouseEvent event) {
+	private void minWindow() {
 		Stage stage = (Stage) mainPane.getScene().getWindow();
 		stage.setIconified(true);
 	}
 
 	@FXML
-	private void closeApp(MouseEvent event) {
+	private void closeApp() {
 		System.exit(0);
 	}
 
 	@FXML
-	private void goBack(MouseEvent event) {
+	private void goBack() {
 		Pane doctorPatientsPane;
 		try {
 			doctorPatientsPane = FXMLLoader
-					.load(getClass().getResource(DoctorParams.DOCTOR_PATIENTS_VIEW));
+					.load(Objects.requireNonNull(getClass().getResource(DOCTOR_PATIENTS_VIEW)));
 			mainPane.getChildren().removeAll();
 			mainPane.getChildren().setAll(doctorPatientsPane);
 		} catch (IOException error) {
@@ -207,10 +193,10 @@ public class PatientRecordsController implements Initializable {
 	// Displays any error returned form the Rest API
 	private void openDialog(String message) {
 		try {
-			FXMLLoader loader = new FXMLLoader(getClass().getResource(DoctorParams.DIALOG_POP_UP_VIEW));
-			Parent root = (Parent) loader.load();
-			DialogPopUpController controler = loader.getController();
-			controler.setMessage(message);
+			FXMLLoader loader = new FXMLLoader(getClass().getResource(DIALOG_POP_UP_VIEW));
+			Parent root = loader.load();
+			DialogPopUpController controller = loader.getController();
+			controller.setMessage(message);
 			Stage stage = new Stage();
 			stage.setHeight(130);
 			stage.setWidth(300);
@@ -220,15 +206,13 @@ public class PatientRecordsController implements Initializable {
 			stage.initStyle(StageStyle.TRANSPARENT);
 			stage.initModality(Modality.APPLICATION_MODAL);
 			
-			// Set the pop up in the center of the main menu window
+			// Set the pop-up in the center of the main menu window
 			stage.setX(LogInController.getStage().getX() + LogInController.getStage().getWidth() / 2 - stage.getWidth() / 2);
 			stage.setY(-75 + LogInController.getStage().getY() + LogInController.getStage().getHeight() / 2 - stage.getHeight() / 2);
 			
 			AccountObjectCommunication.getAnchorPane().setEffect(new BoxBlur(4, 4, 4));
 			stage.show();
-			stage.setOnHiding(event -> {
-				AccountObjectCommunication.getAnchorPane().setEffect(null);
-			});
+			stage.setOnHiding(event -> AccountObjectCommunication.getAnchorPane().setEffect(null));
 		} catch (IOException exception) {
 			exception.printStackTrace();
 		}
@@ -249,8 +233,8 @@ public class PatientRecordsController implements Initializable {
 				
 				for (BitalinoPackage bitalinoPackage : bitalinoPackages) {
 
-					String ECGdata = bitalinoPackage.getecgData();
-					String EMGdata = bitalinoPackage.getemgData();
+					String ECGdata = bitalinoPackage.getEcgData();
+					String EMGdata = bitalinoPackage.getEmgData();
 
 					int[] ECGdataPackage = Arrays.stream(ECGdata.substring(1, ECGdata.length() - 1).split(","))
 							.map(String::trim).mapToInt(Integer::parseInt).toArray();
@@ -271,13 +255,13 @@ public class PatientRecordsController implements Initializable {
 
 					// Get the milliseconds of the starting time of the package to compute the
 					// hundredth
-					int millisecods = calendar.get(Calendar.MILLISECOND);
+					int milliseconds = calendar.get(Calendar.MILLISECOND);
 
 					// Starting date in hundredth of a seconds
-					int hundredth = (((minutes * 60) + seconds) * 100) + millisecods / 10;
+					int hundredth = (((minutes * 60) + seconds) * 100) + milliseconds / 10;
 
 					// Calculate the position of the first data of the package in time to insert it
-					int timePos = 0;
+					int timePos;
 					for (timePos = 0; timePos < time20Array.length; timePos++) {
 						if (time20Array[timePos] == hundredth) {
 							break;
@@ -306,7 +290,7 @@ public class PatientRecordsController implements Initializable {
 			public void run() {
 
 				// Samples in a 20 minutes
-				int samples = DoctorParams.SAMPLING_RATE * 60 * 20;
+				int samples = SAMPLING_RATE * 60 * 20;
 
 				time20Array = new float[samples];
 				ECGdataArray = new float[samples];
@@ -329,13 +313,13 @@ public class PatientRecordsController implements Initializable {
 
 				try {
 					HttpURLConnection connection = (HttpURLConnection) new URL(
-							DoctorParams.BASE_URL + "/getPatientDayRecords").openConnection();
+							BASE_URL + "/getPatientDayRecords").openConnection();
 					connection.setRequestMethod("POST");
 
 					APIRequest requestAPI = new APIRequest();
 					requestAPI.setPatientId(patient.getPatientId());
 					requestAPI.setDate(selectedDate);
-					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), "UTF-8");
+					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), StandardCharsets.UTF_8);
 
 					connection.setDoOutput(true);
 					OutputStreamWriter writer = new OutputStreamWriter(connection.getOutputStream());
@@ -344,7 +328,7 @@ public class PatientRecordsController implements Initializable {
 
 					BufferedReader inputReader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 					String inputLine;
-					StringBuffer response = new StringBuffer();
+					StringBuilder response = new StringBuilder();
 					while ((inputLine = inputReader.readLine()) != null) {
 						response.append(inputLine);
 					}
@@ -354,29 +338,18 @@ public class PatientRecordsController implements Initializable {
 					APIResponse responseAPI = gson.fromJson(response.toString(), APIResponse.class);
 
 					if (!responseAPI.isError()) {
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								patient.getMeasuredPackages().clear();
-								patient.setMeasuredPackages(responseAPI.getDayRecords());
-								addBitalinoDataToGraphArrays(patient.getMeasuredPackages());
-							}
+						Platform.runLater(() -> {
+							patient.getMeasuredPackages().clear();
+							patient.setMeasuredPackages(responseAPI.getDayRecords());
+							addBitalinoDataToGraphArrays(patient.getMeasuredPackages());
 						});
 					} else {
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								openDialog(responseAPI.getAPImessage());
-							}
-						});
+						Platform.runLater(() -> openDialog(responseAPI.getAPImessage()));
 					}
 				} catch (ConnectException | FileNotFoundException conncetionError) {
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							conncetionError.printStackTrace();
-							openDialog("Failed to connect to the server");
-						}
+					Platform.runLater(() -> {
+						conncetionError.printStackTrace();
+						openDialog("Failed to connect to the server");
 					});
 				} catch (IOException error) {
 					error.printStackTrace();
@@ -391,13 +364,13 @@ public class PatientRecordsController implements Initializable {
 			public void run() {
 				try {
 					HttpURLConnection connection = (HttpURLConnection) new URL(
-							DoctorParams.BASE_URL + "/getPatientInformation").openConnection();
+							BASE_URL + "/getPatientInformation").openConnection();
 
 					connection.setRequestMethod("POST");
 
 					APIRequest requestAPI = new APIRequest();
 					requestAPI.setPatientId(patient.getPatientId());
-					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), "UTF-8");
+					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), StandardCharsets.UTF_8);
 
 					connection.setDoOutput(true);
 					OutputStreamWriter writer = new OutputStreamWriter(connection.getOutputStream());
@@ -406,7 +379,7 @@ public class PatientRecordsController implements Initializable {
 
 					BufferedReader inputReader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 					String inputLine;
-					StringBuffer response = new StringBuffer();
+					StringBuilder response = new StringBuilder();
 					while ((inputLine = inputReader.readLine()) != null) {
 						response.append(inputLine);
 					}
@@ -416,27 +389,14 @@ public class PatientRecordsController implements Initializable {
 
 					if (!responseAPI.isError()) {
 						patient = responseAPI.getPatient();
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								loadInformation();
-							}
-						});
+						Platform.runLater(() -> loadInformation());
 					} else {
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								openDialog(responseAPI.getAPImessage());
-							}
-						});
+						Platform.runLater(() -> openDialog(responseAPI.getAPImessage()));
 					}
 				} catch (ConnectException | FileNotFoundException conncetionError) {
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							conncetionError.printStackTrace();
-							openDialog("Failed to connect to the server");
-						}
+					Platform.runLater(() -> {
+						conncetionError.printStackTrace();
+						openDialog("Failed to connect to the server");
 					});
 				} catch (IOException error) {
 					error.printStackTrace();
